Add profile with additional arguments for running under Java 9 during development(#409)